# BA-ChatAppDesktop

./: .gitignore  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: start.sh
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChatArea.tsx  FloatingInput.tsx  NavRail.tsx  SetupScreen.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  separator.tsx  textarea.tsx
src/hooks/: useChat.ts  useTheme.ts
src/lib/: previewMocks.ts
