[package]
name = "chat-app-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "chat_app_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chat-app-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-build = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.11"
hostname = "0.4"
window-vibrancy = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
